# typestate-post

./: .gitignore  Cargo.toml  auto-preview.sh  complex-states.gv  state-enums-rust.adoc  state-enums-rust.md  states.gv  suitability-examples.adoc  suitability-examples.md  typedriven.adoc  typestate-kotlin.adoc  typestate-rust.adoc  typestate-rust.md  typestate.adoc
src/: lib.rs  path.rs
src/user_api/: simple_types.rs
typestate-kt/: .gitignore
typestate-kt/src/: CommonTypes.kt  RepairOrderKitchenSink.kt
typestate-kt/src/repairorder/singlevariables/: SingleVariables.kt
typestate-kt/src/repairorder/stateenum/: StateEnum.kt  StateEnumKtTest.kt
typestate-kt/src/repairorder/typestate/: TypeState.kt
typestate-rust/: Cargo.toml
typestate-rust/src/: lib.rs  repair_order.rs  type_basics.rs  user_api.rs
typestate-rust/src/repair_order/: complex_state.rs  kitchen_sink.rs  single_variables.rs  state_enum.rs  typestate.rs  typestate_serialization_every_step.rs  typestate_serialization_start_end.rs
