[package]
name = "typestate-post"
version = "0.1.0"
authors = ["'Timo Freiberg' <'timo.freiberg@gmail.com'>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6.5"
